--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
+.center-card-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 90vh;
+}
+.login-Card{
+  width: 100%;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+}
+
+.login-Card h2{
+  text-align: center;
+}
+
 .mr-2{
   margin-right:10px;
 }
