--- a/src/App.css
+++ b/src/App.css
@@ -5,13 +5,18 @@
   min-height: 90vh;
 }
 .login-Card{
-  width: 100%;
+  width: 80%;
   border-radius: 5px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 20px;
 }
 
 .login-Card h2{
+  text-align: center;
+  font-weight: 600;
+  color: #3838de;
+}
+.login-Card p{
   text-align: center;
 }
 
@@ -56,6 +61,10 @@
 }
 .complete-task .task-list{
   overflow-y: auto;
+}
+.draggable-card{
+  background-color: #ffe7b8;
+  box-shadow: 0px 0px 4px 0px #212121;
 }
 
 .task-container {
